Change image and file paths to relative links
Updated image and file paths to relative links for better portability.

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 
   <main class="container">
     <section class="hero" id="about">
-      <img src="D:\3rd year subject\BC\WhatsApp Image 2025-10-19 at 21.30.14_f25c1e51.jpg" >
+      <img src="WhatsApp Image 2025-10-19 at 21.30.14_f25c1e51.jpg" >
       <div class="hero-content">
         <h1>Hey, I’m Varda — CSE (AIML) undergrad building clean, useful things for the web.</h1>
         <p>Focused on classic, reliable engineering: solid HTML/CSS/JS foundations, with practical ML where it actually helps. I like simple UIs that load fast and don’t break.</p>
-        <a class="download-btn" href="C:\Users\dell\Downloads\VARDA KUNDE (3).pdf" download>📄 Download Resume</a>
+        <a class="download-btn" href="VARDA KUNDE (3).pdf" download>📄 Download Resume</a>
       </div>
     </section>
 
@@ -138,9 +138,9 @@
 
         <div class="aside-block">
           <h3>Certifications</h3>
-          <a class="btn-lite" href="C:\Certificate\DOC-20250120-WA0009..jpg" target="_blank">OOPs in Java</a>
-          <a class="btn-lite" href="C:\Certificate\Certificate (2).jpg" target="_blank">Power BI</a>
-          <a class="btn-lite" href="C:\Certificate\Certificate.jpg" target="_blank">AI Tools Workshop</a>
+          <a class="btn-lite" href="DOC-20250120-WA0009..jpg" target="_blank">OOPs in Java</a>
+          <a class="btn-lite" href="Certificate (2).jpg" target="_blank">Power BI</a>
+          <a class="btn-lite" href="Certificate.jpg" target="_blank">AI Tools Workshop</a>
         </div>
       </aside>
 
@@ -189,3 +189,4 @@
   </footer>
 </body>
 </html>
+
