--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
   <main class="container">
     <section class="hero" id="about">
-      <img src="WhatsApp Image 2025-10-19 at 21.30.14_f25c1e51.jpg" >
+      <img src="images/profile.jpg" alt="Varda">
       <div class="hero-content">
         <h1>Hey, I’m Varda — CSE (AIML) undergrad building clean, useful things for the web.</h1>
         <p>Focused on classic, reliable engineering: solid HTML/CSS/JS foundations, with practical ML where it actually helps. I like simple UIs that load fast and don’t break.</p>
@@ -189,4 +189,5 @@
   </footer>
 </body>
 </html>
+
 
