--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
       <div class="hero-content">
         <h1>Hey, I’m Varda — CSE (AIML) undergrad building clean, useful things for the web.</h1>
         <p>Focused on classic, reliable engineering: solid HTML/CSS/JS foundations, with practical ML where it actually helps. I like simple UIs that load fast and don’t break.</p>
-        <a class="download-btn" href="VARDA KUNDE (3).pdf" download>📄 Download Resume</a>
+       <a class="download-btn" href="resume/VARDA_KUNDE_resume.docx" download>📄 Download Resume</a>
+
       </div>
     </section>
 
@@ -138,9 +139,9 @@
 
         <div class="aside-block">
           <h3>Certifications</h3>
-          <a class="btn-lite" href="DOC-20250120-WA0009..jpg" target="_blank">OOPs in Java</a>
-          <a class="btn-lite" href="Certificate (2).jpg" target="_blank">Power BI</a>
-          <a class="btn-lite" href="Certificate.jpg" target="_blank">AI Tools Workshop</a>
+         <a class="btn-lite" href="images/certificate1.jpg" target="_blank" rel="noopener noreferrer">OOPs in Java</a>
+<a class="btn-lite" href="images/certificate2.jpg" target="_blank" rel="noopener noreferrer">Power BI</a>
+<a class="btn-lite" href="images/certificate3.jpg" target="_blank" rel="noopener noreferrer">AI Tools Workshop</a>
         </div>
       </aside>
 
@@ -189,5 +190,6 @@
   </footer>
 </body>
 </html>
+
 
 
