--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="hero-content">
         <h1>Hey, I’m Varda — CSE (AIML) undergrad building clean, useful things for the web.</h1>
         <p>Focused on classic, reliable engineering: solid HTML/CSS/JS foundations, with practical ML where it actually helps. I like simple UIs that load fast and don’t break.</p>
-       <a class="download-btn" href="resume/VARDA_KUNDE_resume.docx" download>📄 Download Resume</a>
+       <a class="download-btn" href="resume/VARDA KUNDE (3).pdf" download>📄 Download Resume</a>
 
       </div>
     </section>
@@ -190,6 +190,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
