--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 
   <main class="container">
     <section class="hero" id="about">
-      <img src="WhatsApp Image 2025-10-19 at 21.30.14_f25c1e51.jpg" alt="Varda">
+      <img src="WhatsApp_Image_2025-10-19_at_21.30.14_f25c1e51.jpg" alt="Varda">
       <div class="hero-content">
         <h1>Hey, I’m Varda — CSE (AIML) undergrad building clean, useful things for the web.</h1>
         <p>Focused on classic, reliable engineering: solid HTML/CSS/JS foundations, with practical ML where it actually helps. I like simple UIs that load fast and don’t break.</p>
-       <a class="download-btn" href="VARDA KUNDE (3).pdf" download>📄 Download Resume</a>
+       <a class="download-btn" href="VARDA_KUNDE_(3) .pdf" download>📄 Download Resume</a>
 
       </div>
     </section>
@@ -140,7 +140,7 @@
         <div class="aside-block">
           <h3>Certifications</h3>
          <a class="btn-lite" href="DOC-20250120-WA0009..jpg" target="_blank" rel="noopener noreferrer">OOPs in Java</a>
-<a class="btn-lite" href="certificate (2).jpg" target="_blank" rel="noopener noreferrer">Power BI</a>
+<a class="btn-lite" href="certificate_(2).jpg" target="_blank" rel="noopener noreferrer">Power BI</a>
 <a class="btn-lite" href="certificate.jpg" target="_blank" rel="noopener noreferrer">AI Tools Workshop</a>
         </div>
       </aside>
@@ -190,6 +190,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
