--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
         <div class="aside-block">
           <h3>Certifications</h3>
          <a class="btn-lite" href="DOC-20250120-WA0009..jpg" target="_blank" rel="noopener noreferrer">OOPs in Java</a>
-<a class="btn-lite" href="certificate_(2).jpg" target="_blank" rel="noopener noreferrer">Power BI</a>
-<a class="btn-lite" href="certificate.jpg" target="_blank" rel="noopener noreferrer">AI Tools Workshop</a>
+<a class="btn-lite" href="Certificate_(2).jpg" target="_blank" rel="noopener noreferrer">Power BI</a>
+<a class="btn-lite" href="Certificate.jpg" target="_blank" rel="noopener noreferrer">AI Tools Workshop</a>
         </div>
       </aside>
 
@@ -190,6 +190,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
