--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Varda • Portfolio</title>
   <style>
     :root{
@@ -190,4 +191,5 @@
   </footer>
 </body>
 </html>
+
 
